--- a/index.html
+++ b/index.html
@@ -1,1 +1,136 @@
-<!-- TODO -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>AmplifyTech</title>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        /* Hero section styling */
+        .hero {
+            height: 100vh;
+            background: url('./splash.jpeg') no-repeat center center/cover;
+            color: white;
+            text-align: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        .feature-item {
+            text-align: left;
+        }
+
+        /* Section spacing */
+        section {
+            padding: 60px 0;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- Hero Section -->
+    <header class="hero">
+        <a href="#about" class="btn btn-primary btn-lg">Learn More</a>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h2>About</h2>
+                <p>
+                    We are a talented and professional group of results-driven Principal Software Engineers. We have
+                    extensive experience in cloud services, deployment automation, and software development, including
+                    scalable APIs, distributed processing, and data engineering. We specialize in delivering
+                    high-quality consulting solutions tailored to your business needs. Our expertise has been honed
+                    through many years of experience in significant and successful tech initiatives.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <img src="./about.jpeg" alt="About image" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="bg-light">
+        <div class="container">
+            <h2 class="text-center">Services</h2>
+            <div class="row text-center">
+                <div class="col-md-3">
+                    <div class="p-3">
+                        <i class="fas fa-mobile-alt fa-3x mb-3"></i>
+                        <h4>Cloud Services</h4>
+                        <p class="feature-item">Flexible, scalable, and cost-effective computing solutions that support
+                            a wide range of business and personal needs</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="p-3">
+                        <i class="fas fa-laptop fa-3x mb-3"></i>
+                        <h4>DevOps Solutions</h4>
+                        <p class="feature-item">Streamline and automate the software development and delivery process,
+                            fostering a culture of collaboration, continuous improvement, and rapid iteration.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="p-3">
+                        <i class="fas fa-code fa-3x mb-3"></i>
+                        <h4>API Development</h4>
+                        <p class="feature-item">Facilitate communication between different software systems, enhancing
+                            functionality, integration, and scalability.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="p-3">
+                        <i class="fas fa-code fa-3x mb-3"></i>
+                        <h4>Data Engineering</h4>
+                        <p class="feature-item">Systems and processes that handle large volumes of data, ensuring it is
+                            efficiently collected, stored, processed, and made available for analysis and
+                            decision-making.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container">
+        <h2 class="text-center">Contact Us</h2>
+        <div class="row justify-content-center">
+            <div class="col-md-8 text-center">
+                <p>For consulting inquiries or to discuss how we can help your business thrive, please reach out via
+                    <a href="mailto:contact@amplifytech.io">contact@amplifytech.io</a>.
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center p-4">
+        <p>&copy; 2024 AmplifyTech LLC</p>
+    </footer>
+
+    <!-- Bootstrap JS and Dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- FontAwesome (for icons) -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
+</body>
+
+</html>
