--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                         <i class="fas fa-mobile-alt fa-3x mb-3"></i>
                         <h4>Cloud Services</h4>
                         <p class="feature-item">Flexible, scalable, and cost-effective computing solutions that support
-                            a wide range of business and personal needs</p>
+                            a wide range of business and personal needs.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="p-3">
                         <i class="fas fa-laptop fa-3x mb-3"></i>
                         <h4>DevOps Solutions</h4>
-                        <p class="feature-item">Streamline and automate the software development and delivery process,
-                            fostering a culture of collaboration, continuous improvement, and rapid iteration.</p>
+                        <p class="feature-item">Streamline and automate software development and delivery, fostering a
+                            culture of collaboration, continuous improvement, and rapid iteration.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -97,7 +97,7 @@
                     <div class="p-3">
                         <i class="fas fa-code fa-3x mb-3"></i>
                         <h4>Data Engineering</h4>
-                        <p class="feature-item">Systems and processes that handle large volumes of data, ensuring it is
+                        <p class="feature-item">Implement processes that handle large volumes of data, ensuring it is
                             efficiently collected, stored, processed, and made available for analysis and
                             decision-making.</p>
                     </div>
