--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h2>About</h2>
                 <p>
                     We are a talented and professional group of results-driven Principal Software Engineers. We have
-                    extensive experience in cloud services, deployment automation, and software development, including
+                    extensive experience in cloud services, deployment automation, software development, including
                     scalable APIs, distributed processing, and data engineering. We specialize in delivering
                     high-quality consulting solutions tailored to your business needs. Our expertise has been honed
                     through many years of experience in significant and successful tech initiatives.
